# LibraryManager

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.bat
.github/workflows/: build-windows.yml
installer/: installer.nsi
src/: database.cpp  database.h  main.cpp  resource.h  resource.rc
